--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
-        </div>
+        </div>    
         <div class="page">
             <h1>Amazing Article</h1>
-            <p class="italic">Florin Pop</p>
+            <small class="italic">Florin Pop</small>
             <p class = "text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores cupiditate, maxime aliquid impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores recusandae cumque ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem provident natus veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa. Corrupti, laudantium iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum soluta cupiditate! Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis exercitationem molestias fugiat commodi omnis. Asperiores quia tenetur nemo ipsa.
             </p>
